--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@prisma/client": "4.7.1",
     "apollo-server": "^3.11.1",
     "graphql": "^16.6.0",
     "prisma": "^4.7.1"
