--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "@prisma/client": "4.7.1",
     "apollo-server": "^3.11.1",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
     "prisma": "^4.7.1"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@typescript-eslint/parser": "^5.47.0",
     "esbuild": "^0.16.10",
     "esbuild-node-tsc": "^2.0.4",
