--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
     "prisma": "^4.7.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^8.5.9",
     "@typescript-eslint/parser": "^5.47.0",
     "esbuild": "^0.16.10",
     "esbuild-node-tsc": "^2.0.4",
