--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "nodemon",
+    "watch": "tsx watch src/index.ts",
     "build": "rm -rf dist & etsc",
     "format": "prettier --write ./src",
     "lint": "eslint --ext .ts,.js ./src",
@@ -12,10 +13,12 @@
     "start": "node dist/index.js"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.0",
     "@prisma/client": "4.7.1",
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
     "graphql": "^16.6.0",
+    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
     "prisma": "^4.7.1"
   },
@@ -30,6 +33,7 @@
     "lint-staged": "^13.1.0",
     "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
+    "tsx": "^3.12.1",
     "typescript": "^4.9.4"
   },
   "lint-staged": {
