Added data loaders

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "4.7.1",
     "apollo-server": "^3.11.1",
     "bcryptjs": "^2.4.3",
+    "dataloader": "^2.1.0",
     "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^8.5.1",
